Archive2/0c/fe34a8ba934fea/output
main.cpp: In function 'int main()':
main.cpp:270:11: error: conversion from 'NumFW {aka poly_flyweight<Num>}' to non-scalar type 'Exp {aka poly_flyweight<Base>}' requested
   Exp b = a;
           ^
main.cpp:275:13: warning: unused variable 'i' [-Wunused-variable]
   for (auto i: {1, 2, 3})
             ^
main.cpp:284:41: error: could not convert 'num(int)()' from 'NumFW {aka poly_flyweight<Num>}' to 'Exp {aka poly_flyweight<Base>}'
                  bin('+', num(1), num(1)),
                                         ^
main.cpp:285:41: error: could not convert 'num(int)()' from 'NumFW {aka poly_flyweight<Num>}' to 'Exp {aka poly_flyweight<Base>}'
                  bin('+', num(1), num(1)));
                                         ^
main.cpp:287:12: error: conversion from 'BinFW {aka poly_flyweight<Bin>}' to non-scalar type 'Exp {aka poly_flyweight<Base>}' requested
   Exp e2 = e1;
            ^
main.cpp:293:42: error: could not convert 'num(int)()' from 'NumFW {aka poly_flyweight<Num>}' to 'Exp {aka poly_flyweight<Base>}'
                   bin('+', num(1), num(1)),
                                          ^
main.cpp:294:42: error: could not convert 'num(int)()' from 'NumFW {aka poly_flyweight<Num>}' to 'Exp {aka poly_flyweight<Base>}'
                   bin('+', num(1), num(1))),
                                          ^
